* Models in which the nodes were defined in forward-sampling order could
  could compile very slowly. The compilation time is now much less
  dependent on the order in which the nodes are defined.
* Parameter consistency checks are improved for bounded scalar stochastic
  nodes.
* The sum function was incorrectly reporting itself as a scale-preserving
  function when used with multiple arguments.
  
Changes in JAGS 4.2.0

Bug fixes
=========
* JAGS 4.1.0 did not compile under Solaris Studio 12.3 as it referenced
  some C99 functions that are not part of the C++98 standard (It did
  compile under Solaris Studio 12.4).
* The non-central t distribution (dnt) was not inserted into the bugs
  module.
* The likelihood for left-truncated nodes was not calculated correctly
  (This did not affect truncated nodes with no parents, only truncated
   outcome variables).

Changes in JAGS 4.1.0

Bug fixes
=========
* False positive warnings about unused variables in 4.0.0 and 4.0.1
  are now fixed.
* Using the same name for a counter as an integer vector supplied with
  the data could lead to a "dimension mismatch" error when compiling
  the model.
* The compiler did not check that a subset expression was inside the
  range of a node array leading to a logic error. This is now checked
  in the Compiler::getRange function and a more informative
  compilation error message is generated.
* Setting up a large number of predictive nodes to be monitored
  is now much faster.
* The bugs::ConjugateNormal sample method did not work correctly with
  an exponential prior distribution.
* Error messages for undefined nodes and directed cycles are improved,
  with less misclassification between the two diagnostic messages.
* The configuration file jags.pc for pkg-config now gives the correct
  value for the variable moduledir.

New features
============
* A new distribution "dsample" in the bugs module represents sampling
  without replacement. It has the same interface as "dmulti" (sampling